Update render.yaml to properly copy dist to build directory

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && npm run copy-build",
-    "copy-build": "node -e \"require('fs').cpSync('dist', '../build', {recursive: true})\"",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
