--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: connectup-frontend
     env: static
-    buildCommand: cd frontend && npm ci && npm run build && cd .. && cp -r frontend/dist build
-    staticPublishPath: build
+    buildCommand: cd frontend && npm ci && npm run build
+    staticPublishPath: frontend/dist
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
