--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,14 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  {
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  }
+},
+
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
